--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <button id="loadAllButton" class="load-more-btn">Muat Ulang Semua Data</button>
     </div>
     <script>
-        const API_URL = "URL_APPS_SCRIPT_ANDA_DI_SINI"; // GANTI DENGAN URL API APPS SCRIPT ANDA!
+        const API_URL = "https://script.google.com/macros/s/AKfycbwdE_k1JNP84PPns5fe_Z0ieLyHX-QclKolEeUZb_eb64GFfWMmOfFD_fWj5ozo6rMH/exec"; // GANTI DENGAN URL API APPS SCRIPT ANDA!
         document.addEventListener('DOMContentLoaded', loadAllStudents);
         document.getElementById('studentForm').addEventListener('submit', function(e) {
             e.preventDefault();
