--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
  <script>
   // Ganti dengan URL Aplikasi Web dari Apps Script Anda
-  const API_URL = 'https://script.google.com/a/macros/guru.smk.belajar.id/s/AKfycbxcljwH55OqiMlwzD59Q9KWKpRQGPUX7JIx7sCQrgQSP0hfU_cTY6ctX4erfII0XWDJxw/exec'; 
+  const API_URL = 'https://script.google.com/macros/s/AKfycbxcljwH55OqiMlwzD59Q9KWKpRQGPUX7JIx7sCQrgQSP0hfU_cTY6ctX4erfII0XWDJxw/exec'; 
   var currentStudentData = null;
 
   async function searchStudent() {
