--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <p>Apakah data di atas sudah benar?</p>
                 <div class="actions">
                     <button onclick="confirmData()">Ya, Data Benar</button>
-                    <button onclick="showUpdateForm()">Tidak, Perbarui Data</button>
+                    <button onclick="showUpdateForm()" style="background-color: red;">Tidak, Perbarui Data</button>
                 </div>
             </div>
             <div id="message" class="success-message" style="display:none;"></div>
