--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div id="validationActions" style="display:none;">
                 <p>Apakah data di atas sudah benar?</p>
                 <div class="actions">
-                    <button onclick="confirmData()">Ya, Data Benar</button>
+                    <button onclick="confirmData()" style="background-color: green;">Ya, Data Benar</button>
                     <button onclick="showUpdateForm()" style="background-color: red;">Tidak, Perbarui Data</button>
                 </div>
             </div>
